<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="none"></string>
    <string name="app_name">CERN Maps</string>
    <string name="schedule">Schedule</string>
    <string name="locateme">Locate Me</string>
    <string name="phonebook">Phonebook</string>
    <string name="overflow">More maps</string>
    <string name="search">Search&#8230;</string>
    <string name="select_view">Select View</string>
    <string name="textOpenStreetMapsContributors">© OpenStreetMap contributors</string>
    <string name="OnEmptySearch">Please type in something!</string>
    <string name="nointernet">There is no internet connection at the moment. For security reasons Phonebook requires internet.</string>
    <string name="trams">CERN</string>
    <string name="tpg">TPG Timetable</string>
    <string name="image">IMG</string>
    <string name="BelAir">Bel-Air</string>
    <string name="ValThoiry">Val-Thoiry</string>
    <string name="FerneyVoltaireMairie">Ferney-Voltaire-Mairie</string>
    <string name="next_trams">Next trains in: Sorry, no data</string>
    <string name="UnsuccessfulLocatization">Cannot estimate your position</string>
    <string name="UnsuccessfulPhonebook">Cannot get results for your query</string>
    <string name="WaitForLocation">Waiting for location</string>
    <string name="OK">OK</string>
    <string name="next_in">next in</string>
    <string name="NextTramIn">Next tram in:</string>
    <string name="StartFrom">Starting from</string>
    <string name="GPSOff">GPS is disabled in your device</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="stopasking">Stop Asking</string>
    <string name="CERNShuttleService">Shuttle service schedule</string>
    <string name="OutOfBound">You are too far from CERN</string>
    <string name="NoSearchResults">Sorry, no results for&#32;</string>
    <string name="MapToSmall">Map to small to show&#32;</string>
    <string name="NextShuttleIn">transport at</string>
    <string name="Y">Y</string>
    <string name="N18">18</string>
    <string name="line">Line</string>
    <string name="nool"></string>
    <string name="icon">icon</string>
    <string name="refresh">Refresh</string>

    <!-- About -->
    <string name="about">About</string>
    <string name="adrian">adrianalan.pol@gmail.com \nCERN PH \nTechnical University of Denmark</string>
    <string name="andrea">contact@andreagiardini.com \nCERN IT \nUniversity of Bologna</string>
    <string name="contribute">Please report suggestions and bugs (and feel free to contribute to the code) to https://github.com/AdrianAlan/cern-maps</string>
    <string name="contributors">© 2015 Created by</string>
    <string name="github">GitHub</string>
    <string name="licence">This software contains information from OpenStreetMap, which is made available here under the Open Database License (ODbL). See more at www.openstreetmap.org/copyright. Adrian Alan Pol and Andrea Giardini wrote this app. As long as you retain this notice you can do whatever you want with this stuff. If we meet some day, and you think this stuff is worth it, you can buy us a beer in return.\n\nWe would like to send special thanks to Sebastian Lopienski, who helped us a lot with the app, and GS department for giving us hints about map services.</string>

    <!-- Navigation -->
    <string-array name="NavigationTitles">
        <item>Map</item>
        <item>Phonebook</item>
        <item>TPG Timetable</item>
        <item>Shuttles</item>
        <item>About</item>
    </string-array>
    <string-array name="NavigationDescriptions">
        <item>Locate your own black hole</item>
        <item>For stalking CERN people</item>
        <item>Probably on strike</item>
        <item>Everyday we\'re shutteling</item>
        <item>Who let the dogs out</item>
    </string-array>
    <string-array name="MapSelectorTitles">
        <item>Standard</item>
        <item>Cycle</item>
        <item>Transport</item>
    </string-array>
    <string-array name="MapSelectorDescriptions">
        <item>Perfect map type for autumn strolls to R2</item>
        <item>Ideal for your preparations for Tour de France</item>
        <item>Cruising down the CERN in your 64?</item>
    </string-array>

</resources>