<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cern_black"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="5dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cern_black"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/contributors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/contributors"
            android:textColor="@color/cern_white"
            android:textSize="@dimen/text_small" />

        <RelativeLayout
            android:id="@+id/avatars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contributors"
            android:gravity="center" >

            <ImageView
                android:id="@+id/aap"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/adrian"
                android:src="@drawable/aap" />

            <TextView
                android:id="@+id/adrian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/aap"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/aap"
                android:layout_toRightOf="@+id/aap"
                android:text="@string/adrian"
                android:textColor="@color/cern_white"
                android:textSize="@dimen/text_small" />

            <ImageView
                android:id="@+id/ag"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_below="@+id/aap"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/andrea"
                android:src="@drawable/ag" />

            <TextView
                android:id="@+id/andrea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/ag"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/ag"
                android:layout_toRightOf="@+id/ag"
                android:text="@string/andrea"
                android:textColor="@color/cern_white"
                android:textSize="@dimen/text_small" />
        </RelativeLayout>

        <TextView
            android:id="@+id/licence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/avatars"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/licence"
            android:textColor="@color/cern_white"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/contribute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/licence"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/contribute"
            android:textColor="@color/cern_white"
            android:textSize="@dimen/text_small" />

        <ImageButton
            android:id="@+id/github_icon"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_below="@+id/contribute"
            android:layout_centerHorizontal="true"
            android:background="@drawable/selector_github"
            android:contentDescription="@string/github" />
    </RelativeLayout>

</ScrollView>