<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dip"
    android:background="@color/cern_greyed"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/buttonInfo"
        android:layout_width="48dip"
        android:layout_height="46dip"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/selector_header"
        android:contentDescription="@string/about"
        android:src="@drawable/ic_action_about" />

    <TextView
        android:id="@+id/barTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="51dip"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@+id/buttonInfo"
        android:background="@color/cern_blue"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/cern_white"
        android:textSize="25sp" />

    <ImageButton
        android:id="@+id/buttonTrams"
        android:layout_width="48dip"
        android:layout_height="46dip"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/selector_header"
        android:contentDescription="@string/schedule"
        android:src="@drawable/ic_action_transport_tram_icon" />

</RelativeLayout>