<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/action_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cern_transparent"
    android:gravity="center_vertical" >

    <TextView
        android:id="@+id/action_bar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cern_white"
        android:textSize="@dimen/text_normal" />

    <LinearLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@color/cern_transparent" >

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:background="@color/cern_grey_transparent"
            android:fitsSystemWindows="true"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:padding="3dip"
            android:textColor="@color/cern_white" >

            <requestFocus />
        </EditText>

        <ImageButton
            android:id="@+id/imageButtonSearch"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="5dip"
            android:background="@drawable/selector_search"
            android:contentDescription="@string/locateme"
            android:src="@drawable/ic_action_search" />

        <ImageButton
            android:id="@+id/imageButtonMapType"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="5dip"
            android:background="@drawable/selector_search"
            android:contentDescription="@string/overflow"
            android:src="@drawable/ic_action_overflow" />
    </LinearLayout>

</LinearLayout>