<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/boxTitle"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/selector_navigation"
    android:paddingBottom="5dp"
    android:paddingTop="2dp" >

    <TextView
        android:id="@+id/textViewLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:text="@string/line"
        android:layout_marginTop="4dp"
        android:textColor="@color/cern_white"
        android:textSize="@dimen/text_normal" />

    <TextView
        android:id="@+id/imageViewLine"
        android:layout_width="40dip"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_toRightOf="@+id/textViewLine"
        android:layout_toEndOf="@+id/textViewLine"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/trams_18"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/Y"
        android:textColor="@color/cern_white"
        android:textSize="@dimen/text_normal"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewLine"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|start"
        android:layout_alignBottom="@+id/textViewMinutes"
        android:text="@string/next_in"
        android:textColor="@color/cern_white"
        android:textSize="@dimen/text_small" />
    
    <TextView
        android:id="@+id/textViewMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="10dip"
        android:layout_toRightOf="@+id/textViewNext"
        android:layout_toEndOf="@+id/textViewNext"
        android:layout_below="@+id/imageViewLine"
        android:textColor="@color/cern_white"
        android:textSize="@dimen/text_big" />
    
    <TextView
        android:id="@+id/textViewDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:gravity="center"
        android:layout_toRightOf="@+id/textViewMinutes"
        android:layout_toEndOf="@+id/textViewMinutes"
        android:layout_alignBottom="@+id/textViewMinutes"
        android:textColor="@color/cern_white"
        android:textSize="@dimen/text_small" />

</RelativeLayout>